# TestCMakeProject

./: .clang-format  CMakeLists.txt  GITHUB_OUTPUT  README.md  TestCMakeProject.c  TestCMakeProject.h  main.c
.github/: release-drafter.yml
.github/workflow/: release.yml
.github/workflows/: msbuild.yml  release.yml
